--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
   <head>
     <meta name=”viewport” content=”width=device-width, initial-scale=1.0”>
+    <link rel="stylesheet" href="normalize.css"/>
     <link rel="stylesheet" href="style.css"/>
     <title>Sophia and Paolo's Puglia Page</title>
   </head>
   
   <body>
-    <header>
+    <header class="site-header">
       <h1>S & P Puglia</h1>
     </header>
     
