--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <body>
     <header class="site-header">
       <h1>S & P Puglia</h1>
+      <a href="about.html">About</a>
+      <a href="https://translate.google.com/?sl=auto&tl=it&op=translate" target="_blank">Google Translate</a>
     </header>
     
     <div>
