--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
   <body>
     <header class="site-header">
       <h1>S & P Puglia</h1>
-      <a href="about.html">About</a>
       <a href="https://translate.google.com/?sl=auto&tl=it&op=translate" target="_blank">Google Translate</a>
+      <nav class="main-nav">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+         </ul
+      </nav>
     </header>
     
     <div>
