--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <li>Cultural connections</li>
         <li>Best local treats!</li>
       </ul>
-        <img src="https://unsplash.com/photos/zhiZOpm99Iw?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink" class="img1"/>
+        <img src="Mozz&Prosciut.jpg" class="img1"/>
       <img src="https://scontent.fmci2-1.fna.fbcdn.net/v/t1.0-9/60491934_10103985364085288_3096932545837662208_n.jpg?_nc_cat=104&ccb=2&_nc_sid=0be424&_nc_ohc=gzigTBsH6IMAX_vcHVe&_nc_ht=scontent.fmci2-1.fna&oh=0e9595bb67481c8f46a5b0127c603e7f&oe=5FBE9432" class="img2"/>
     </div>
     
