--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
     
     <footer class="main-footer">
       <h6>Copyright McKynlee Westman 2020</h6>
+      <ul class="footer-nav clearfix">
+        <li><a href="/">Home</a></li>
+        <li><a href="/about.html">About</a></li>
+        <li><a href="/contact.html">Contact Us</a></li>
     </footer>
   </body>
 </html>
