--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
       <p id="main-text"> Something about Paolo and Sophia </p>
     </div>
     
-    <footer class="main-footer">
-      <h6>Copyright McKynlee Westman 2020</h6>
-      <ul class="footer-nav clearfix">
+    <footer class="main-footer clearfix">
+      <h6 class="copywrite">Copyright McKynlee Westman 2020</h6>
+      <ul class="footer-nav">
         <li><a href="/">Home</a></li>
         <li><a href="/about.html">About</a></li>
         <li><a href="/contact.html">Contact Us</a></li>
