--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
       <p id="main-text"> Who we are: </p>
       <p>It only takes one glance at Sophia and Paolo to understand why they are known as "The Dream Team"; not only are they physical specimens, they are charismatic, witty and fun as fuck!  They're the type of people you just know you'll be safe with your life in their hands.</p>
     </div>
+        
+        <script type="text/javascript">
+          document.write (Javascript test)
+        </script>
     
     <footer class="main-footer clearfix">
       <ul class="footer-nav">
