--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
         
         <script type="text/javascript">
-          document.write (Javascript test)
+          document.write ("Javascript test");
         </script>
     
     <footer class="main-footer clearfix">
